--- a/src/sass/_interface.scss
+++ b/src/sass/_interface.scss
@@ -1,3 +1,7 @@
+h1{
+	text-align: center !important;
+	padding-bottom: 15px;
+}
 .instructions{
 	font-size: 18px;
 	border-bottom: 1px solid $black;
